# platform-system-core

./: .gitignore  Makefile.am  configure.ac
adb/: Android.mk  Makefile.am  adb.c  adb.cpp  adb.h  adb_main.cpp  adbd.service  configure.ac  launch_adbd  launch_adbd_pcie  mutex_list.h  pcie.service  services.cpp  set_verity_enable_state_service.cpp  sockets.c  sockets.cpp  start_adbd  start_pcie  transport.cpp  transport.h  transport_local.cpp  usb_linux_client.cpp
adb/daemon/: main.cpp  usb.cpp
base/: Makefile.am  configure.ac
bootstat/: bootstat.rc
debuggerd/: init_debuggerd.service  utility.cpp
fastboot/: Makefile.am  configure.ac
fs_mgr/: Makefile.am  configure.ac  fs_mgr.cpp  fs_mgr.pc.in  fs_mgr_avb.cpp  fs_mgr_fstab.cpp  fs_mgr_verity.cpp
fs_mgr/include/: fs_mgr.h
fs_mgr/libfs_avb/: avb_util.cpp
healthd/: healthd_mode_charger.cpp
include/: Makefile.am  configure.ac
include/cutils/: native_handle.h  stdatomic.h  threads.h
include/private/: android_filesystem_config.h
include/system/: camera.h  graphics-base.h  graphics.h
init/: Android.mk  first_stage_init.cpp  first_stage_mount.cpp  init.cpp  init_first_stage.cpp  mount_handler.cpp  selinux.cpp  service.cpp  switch_root.cpp
leproperties/: Makefile.am  configure.ac  leprop.service  ll.c  ll.h  property_service.c  property_service.h  proptrigger.conf  proptrigger.sh
libbacktrace/: Makefile.am  configure.ac
libcutils/: Makefile.am  configure.ac  fs_config.c  libcutils.pc.in  record_stream.c  threads.c
libgrallocusage/: Android.bp
libion/: Makefile.am  configure.ac  libion.pc.in
liblog/: Makefile.am  configure.ac  logd_write_syslog.c
libmemtrack/: memtrack.cpp
libsparse/: Makefile.am
libsync/: Android.mk  Makefile.am  configure.ac  sync.c
libsync/include/sync/: sync.h
libsync/tests/: sync_test.cpp
libsysutils/: Makefile.am  configure.ac
libutils/: Makefile.am  String16.cpp
libvndksupport/: linker.c
libziparchive/: zip_archive.cc
lmkd/: lmkd.c
logcat/: Makefile.am  configure.ac
logd/: LogBuffer.cpp  LogListener.cpp  Makefile.am  configure.ac  earlyinit-logd.service  logd.path  logd.service  main.cpp  non-root_start_logd  start_logd
logwrapper/: Makefile.am  configure.ac
mkbootimg/: makefile  mkbootimg.c
powerapp/: power_config.service  reset_reboot_cookie.service  start_power_config
rootdir/: Android.mk  Makefile.am  configure.ac  init.rc  ueventd.rc
rootdir/etc/: Makefile.am  init.qcom.post_boot.sh  init.qti.debug.sh  init.qti.early_boot.sh  init_early_boot.service  init_post_boot.service  ld.config.txt
rootdir/etc/apq8009/: init.post_boot.sh
rootdir/etc/genericarmv8/: init.post_boot.sh
rootdir/etc/mtp8909/: init.post_boot.sh
rootdir/etc/qcs404-rb1/: init.post_boot.sh
rootdir/etc/qcs40x/: init.post_boot.sh  init.qti.debug.sh
rootdir/etc/qcs8250/: init.post_boot.sh
rootdir/etc/qrb5165/: init.post_boot.sh
rootdir/etc/scuba/: init.post_boot.sh
rootdir/etc/sdmsteppe/: init.post_boot.sh
rootdir/etc/sxr2130/: init.post_boot.sh
sdcard/: Android.mk  fuse.cpp  sdcard.c  sdcard.cpp
storaged/: storaged.rc
toolbox/: Android.mk
usb/: Makefile.am  configure.ac  start_usb  target  usb.service  usb_composition
usb/compositions/: 9008  901C  901D  901F  9020  9021  9022  9024  9025  902B  902D  9039  9049  904A  9056  9057  9059  905B  9060  9063  9064  9067  9084  9085  9091  90A1  90A9  90AD  90B1  90B8  90C0  90CA  90CB  90CC  90CD  90D5  90D6  90D9  90DB  90DF  (+30 more)
