# Export essential headers
systemheaders_includedir=$(includedir)/system
systemheaders_include_HEADERS := $(top_srcdir)/system/camera.h
systemheaders_include_HEADERS += $(top_srcdir)/system/graphics.h
systemheaders_include_HEADERS += $(top_srcdir)/system/thread_defs.h
systemheaders_include_HEADERS += $(top_srcdir)/system/window.h

netutilsheaders_includedir=$(includedir)/netutils
netutilsheaders_include_HEADERS := $(top_srcdir)/netutils/dhcp.h
netutilsheaders_include_HEADERS += $(top_srcdir)/netutils/ifc.h
